[package]
name = "LudumDare50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.6"
bevy_prototype_lyon = "0.4"
rand = "0.8.0"
rand_pcg = "0.3.1"
bevy_egui = "0.11"
egui = "0.16"
serde = { version = "1", features = ["derive"] }
ron = "0.7"
bevy-inspector-egui = { version = "0.8" }
bevy_rapier2d = { version = "0.12", features = ["simd-stable", "render"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3